refactor: 상수를 직접 리스트화하는 것이 아닌 Enum list를 반환할 수 있도록 수정 (#332)